# PWDuck

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: cryptography.rs  error.rs  io.rs  lib.rs  mem_protection.rs  passwords.rs
core/src/auto_type/: auto_type.pest  mod.rs
core/src/dto/: entry.rs  group.rs  key_file.rs  master_key.rs  mod.rs
core/src/io/: entry.rs  group.rs  key_file.rs  master_key.rs  mod.rs  settings.rs  vault.rs
core/src/model/: entry.rs  group.rs  key_file.rs  master_key.rs  mod.rs  settings.rs  uuid.rs  vault.rs
gui/: Cargo.toml
gui/src/: error.rs  icons.rs  lib.rs  password_score.rs  theme.rs  utils.rs
gui/src/pw_modal/: mod.rs
gui/src/pw_modal/password_generator/: mod.rs  passphrase_tab.rs  password_tab.rs
gui/src/vault/: creator.rs  loader.rs  mod.rs  settings.rs  tab.rs  unlock.rs
gui/src/vault/container/: list.rs  mod.rs  modify_entry.rs  modify_group.rs  toolbar.rs
src/: main.rs
