[package]
name = "pwduck"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core",
    "gui"
]

[dependencies]
pwduck_gui = { path = "./gui" }
async-trait = "0.1.50"
rfd = "0.4.0"