[package]
name = "pwduck"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

[workspace]
members = [
    "core",
    "gui"
]

[dependencies]
pwduck_gui = { path = "./gui" }
async-trait = "0.1.50"
rfd = "0.5.1"
dirs = "4.0.0"
opener = "0.5.0"
enigo = "0.0.14"
async-std = "1.9.0"