[package]
name = "pwduck_core"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seckey = "0.11.2"
rand = { version = "0.8.3" }
rand_chacha = "0.3.0"
rand_core = "0.6.2"
argon2 = { version = "0.2.0", features = ["zeroize"] }
rust-crypto = "0.2.36"
base64 = "0.13.0"
#zeroize = {version = "1.3.0", features = "zeroize_derive" }
#zeroize_derive = "1.1.0"
serde = { version = "1.0.125", features = ["derive"] }
ron = "0.6.4"
sha256 = "1.0.2"

[dependencies.zeroize]
version = "1.3.0"
features = ["zeroize_derive"]