[package]
name = "pwduck_core"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"

[dependencies]
# seckey = "0.11.2" # Removed by own version
seckey = { git="https://github.com/Kaiden42/seckey", rev = "e6dd63c3957c65200fd5deb2909c3140a9b641a9", features = ["mlock"]}
zeroize = { version = "1.3.0", features = ["zeroize_derive"]}
rand = { version = "0.8.3" }
rand_chacha = "0.3.0"
rand_core = "0.6.2"
argon2 = { version = "0.3.1", features = ["zeroize"] }
base64 = "0.13.0"
serde = { version = "1.0.125", features = ["derive"] }
ron = "0.7.0"
sha256 = "1.0.2"
getset = "0.1.1"
pw_entropy = { git = "https://github.com/Kaiden42/pw_entropy", rev = "d8d8305db936a94cc50bb770b8898f18f67faf71" }
aes = "0.7.2"
chacha20 = "0.8.1"
block-modes = "0.8.1"
pest = "2.1.3"
pest_derive = "2.1.0"
dirs = "4.0.0"
lazy_static = "1.4.0"

[target.'cfg(not(windows))'.dependencies]
rlimit = "0.6.2"

[dev-dependencies]
mocktopus = "0.7.11"
tempfile = "3.2.0"