[package]
name = "pwduck_gui"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwduck_core = {path = "../core"}
iced = "0.3.0"
iced_native = "0.4.0"
async-trait = "0.1.50"
zeroize = "1.3.0"
lazy_static = "1.4.0"
getset = "0.1.1"

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
rev = "7a6918a50fa6784ce7d11348b71ea4331d9d6200"
default-features = false
features = ["card", "modal"]