[package]
name = "pwduck_gui"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwduck_core = {path = "../core"}
iced = "0.3.0"
iced_native = "0.4.0"
async-trait = "0.1.50"
zeroize = "1.3.0"
lazy_static = "1.4.0"
getset = "0.1.1"

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
#rev = "f93ebda66b54d183c366a7170029528a99dcf3f3"
rev = "bb2a7562224b804ab2fa5e55d3a7e3677f9a26d1"
default-features = false
features = ["card", "modal", "tab_bar", "number_input", "split"]